[tool.poetry]
name = "test-miniapp"
version = "0.1.0"
description = "Django DRF application that serves index.html from root API"
authors = ["tphung <your.email@example.com>"]
readme = "README.md"

# Either use this configuration for a normal package:
packages = [{include = "miniapp"}, {include = "api"}]

# Or alternatively, if you don't want to install the project as a package at all:
# package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.7"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
