[tool.poetry]
name = "car_tinder"
version = "0.1.0"
description = "A Flask application for swiping on "
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
python-dotenv = "^1.0.0"
flask-cors = "^5.0.1"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

