[tool.poetry]
name = "car_tinder"
version = "0.1.0"
description = "A Flask application for swiping on "
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.20.0"
quart-cors = "^0.6.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.30.0"
requests = "^2.32.3"
hypercorn = "^0.16.0"
celery = "^5.5.2"
aioredis = "^2.0.1"
telebot = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

